k8s/kompose/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shoppermart
  labels:
    app: shoppermart
