k8s/kompose/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppermart-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2   # strips /grafana, passes /$2[web:31][web:33]
spec:
  rules:
    - http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
          - path: /grafana(/|$)(.*)    # regex: captures /grafana and trailing path[web:31][web:33]
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8088
